RESOLVED FIXED27645
Fix the last of the x-frame constructor calls to have the right prototype chains
https://bugs.webkit.org/show_bug.cgi?id=27645
Summary Fix the last of the x-frame constructor calls to have the right prototype chains
Eric Seidel (no email)
Reported 2009-07-24 03:28:44 PDT
Fix the last of the x-frame constructor calls to have the right prototype chains I also augmented the test to be able to support arguments (Worker requires an argument).
Attachments
patch (13.71 KB, patch)
2009-07-24 03:36 PDT, Eric Seidel (no email)
abarth: review+
Eric Seidel (no email)
Comment 1 2009-07-24 03:36:51 PDT
Adam Barth
Comment 2 2009-07-24 11:33:43 PDT
Comment on attachment 33423 [details] patch + // FIXME: Why do we use the lexical global object here? I believe this is correct. See step 14 of: http://www.whatwg.org/specs/web-workers/current-work/#creating-workers 14. Let docs be the list of relevant Document objects to add given the global scope of the script that invoked the constructor. The lexical global object is "the global scope of the script that invoked the constructor".
Eric Seidel (no email)
Comment 3 2009-07-24 12:01:28 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/fast/dom/constructed-objects-prototypes-expected.txt M LayoutTests/fast/dom/resources/constructed-objects-prototypes.js M WebCore/ChangeLog M WebCore/bindings/js/JSAudioConstructor.cpp M WebCore/bindings/js/JSImageConstructor.cpp M WebCore/bindings/js/JSMessageChannelConstructor.cpp M WebCore/bindings/js/JSOptionConstructor.cpp M WebCore/bindings/js/JSWebKitPointConstructor.cpp M WebCore/bindings/js/JSWorkerConstructor.cpp Committed r46368 M WebCore/ChangeLog M WebCore/bindings/js/JSWorkerConstructor.cpp M WebCore/bindings/js/JSWebKitPointConstructor.cpp M WebCore/bindings/js/JSOptionConstructor.cpp M WebCore/bindings/js/JSImageConstructor.cpp M WebCore/bindings/js/JSAudioConstructor.cpp M WebCore/bindings/js/JSMessageChannelConstructor.cpp M LayoutTests/ChangeLog M LayoutTests/fast/dom/constructed-objects-prototypes-expected.txt M LayoutTests/fast/dom/resources/constructed-objects-prototypes.js r46368 = 363dcbf1234c0cb5b8f2db7b4829bc075bb640c4 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk http://trac.webkit.org/changeset/46368
Note You need to log in before you can comment on or make changes to this bug.