WebCore/bindings/js/JSAudioConstructor.cpp
@@ -50,9 +50,9 @@ JSAudioConstructor::JSAudioConstructor(ExecState* exec, JSDOMGlobalObject* globa
 
 static JSObject* constructAudio(ExecState* exec, JSObject* constructor, const ArgList& args)
 {
+    JSAudioConstructor* jsAudio = static_cast<JSAudioConstructor*>(constructor);
     // FIXME: Why doesn't this need the call toJS on the document like JSImageConstructor?
-
-    Document* document = static_cast<JSAudioConstructor*>(constructor)->document();
+    Document* document = jsAudio->document();
     if (!document)
         return throwError(exec, ReferenceError, "Audio constructor associated document is unavailable");
 
@@ -62,7 +62,7 @@ static JSObject* constructAudio(ExecState* exec, JSObject* constructor, const Ar
         audio->setSrc(args.at(0).toString(exec));
         audio->scheduleLoad();
     }
-    return asObject(toJS(exec, audio.release()));
+    return asObject(toJS(exec, jsAudio->globalObject(), audio.release()));
 }
 
 ConstructType JSAudioConstructor::getConstructData(ConstructData& constructData)
