WebCore/bindings/js/JSOptionConstructor.cpp
@@ -43,7 +43,8 @@ JSOptionConstructor::JSOptionConstructor(ExecState* exec, JSDOMGlobalObject* glo
 
 static JSObject* constructHTMLOptionElement(ExecState* exec, JSObject* constructor, const ArgList& args)
 {
-    Document* document = static_cast<JSOptionConstructor*>(constructor)->document();
+    JSOptionConstructor* jsConstructor = static_cast<JSOptionConstructor*>(constructor);
+    Document* document = jsConstructor->document();
     if (!document)
         return throwError(exec, ReferenceError, "Option constructor associated document is unavailable");
 
@@ -67,7 +68,7 @@ static JSObject* constructHTMLOptionElement(ExecState* exec, JSObject* construct
         return 0;
     }
 
-    return asObject(toJS(exec, element.release()));
+    return asObject(toJS(exec, jsConstructor->globalObject(), element.release()));
 }
 
 ConstructType JSOptionConstructor::getConstructData(ConstructData& constructData)
